# advanced_gantt

./: .gitignore  README.md  demo_data.json  pyproject.toml  test_api.py
advanced_gantt/: hooks.py  modules.txt
advanced_gantt/advanced_gantt/doctype/gantt_chart_settings/: gantt_chart_settings.json  gantt_chart_settings.py
advanced_gantt/advanced_gantt/workspace/advanced_gantt/: advanced_gantt.json
advanced_gantt/api/: gantt_data.py
advanced_gantt/config/: desktop.py  docs.py
advanced_gantt/public/css/: gantt_styles.css
advanced_gantt/public/js/: gantt_component.js
advanced_gantt/www/: gantt.html  gantt.py
